Update Dockerfile to new Java openjdk